--- a/WebDevBootcamp/workplace/apis/movie_search_app/package.json
+++ b/WebDevBootcamp/workplace/apis/movie_search_app/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^2.5.7",
+    "ejs-lint": "^0.3.0",
     "express": "^4.16.3",
     "request": "^2.85.0"
   }
