--- a/WebDevBootcamp/YelpCamp/package.json
+++ b/WebDevBootcamp/YelpCamp/package.json
@@ -20,6 +20,8 @@
     "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
     "express": "^4.16.3",
+    "mongodb": "*",
+    "mongoose": "^5.0.10",
     "request": "^2.85.0"
   }
 }
