--- a/WebDevBootcamp/RESTFUL_Routing/galaxy_app/package.json
+++ b/WebDevBootcamp/RESTFUL_Routing/galaxy_app/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "blog_app",
+  "name": "galaxy_app",
   "version": "1.0.0",
-  "description": "",
+  "description": "My own RESTful Galaxy App",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "ALi Nisar Ahmed",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
     "express": "^4.16.3",
-    "express-sanitizer": "^1.0.3",
-    "method-override": "^2.3.10",
     "mongoose": "^5.0.11"
   }
 }
