--- a/WebDevBootcamp/YelpCamp/package.json
+++ b/WebDevBootcamp/YelpCamp/package.json
@@ -20,8 +20,12 @@
     "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "mongodb": "*",
     "mongoose": "^5.0.10",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.0",
     "request": "^2.85.0"
   }
 }
